# atlas-app-toolkit

./: Makefile  go.mod
auth/: context.go  interceptor_test.go
cmode/: cmode_example_test.go  cmode_test.go
errors/: README.md  container.go  container_test.go  context.go  context_test.go
errors/mappers/pqerrors/: pqerrors.go  pqerrors_test.go
errors/mappers/validationerrors/: interceptor.go  validationerrors.go  validationerrors_test.go
gateway/: README.md  errors.go  errors_test.go  field_presence.go  fields.go  fields_test.go  gateway.go  gateway_test.go  middleware.go  middleware_test.go  operator.go  response.go  response_test.go
gateway/internal/: test.proto
gorm/: README.md  collection_operators.go  collection_operators_test.go  converter.go  fields.go  filtering.go  filtering_test.go  transaction.go  transaction_test.go  utilities.go
gorm/proto/: gorm.proto
gorm/resource/: README.md  example_test.go  resource.go  resource_test.go
integration/: README.md  grpc.go  grpc_test.go  http.go  http_test.go  jwt.go
logging/: README.md  gateway_interceptor.go  interceptor.go  interceptor_test.go
query/: BUILD.bazel  README.md  collection_operators.pb.go  collection_operators.proto  page_token.go  sorting.go
requestid/: README.md  interceptor_test.go  requestid.go
requestinfo/: README.md  metadata_annotator_test.go  requestinfo.go  runtime.go
rpc/errdetails/: BUILD.bazel  error_details.pb.go  error_details.proto
rpc/errfields/: BUILD.bazel  error_fields.pb.go  error_fields.proto
rpc/resource/: BUILD.bazel  README.md  json_test.go  resource.pb.go  resource.proto
server/: server.go  server_example_test.go  server_test.go  tls_test.go
server/testdata/: test.pb.go  test.pb.gw.go  test.proto
tracing/: http.go
