load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "query_proto",
    srcs = ["collection_operators.proto"],
    visibility = ["//visibility:public"],
    deps = ["//protoc-gen-openapiv2/options:options_proto"],
)

go_proto_library(
    name = "query_go_proto",
    importpath = "github.com/klosmo/atlas-app-toolkit/query",
    proto = ":query_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "query",
    srcs = [
        "fields.go",
        "filtering.go",
        "filtering_lexer.go",
        "filtering_parser.go",
        "page_token.go",
        "pagination.go",
        "searching.go",
        "sorting.go",
    ],
    embed = [":query_go_proto"],
    importpath = "github.com/klosmo/atlas-app-toolkit/v2/query",
    importpath_aliases = ["github.com/klosmo/atlas-app-toolkit/query"],
    visibility = ["//visibility:public"],
    deps = [
        "//errors",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//codes",
        "@com_github_klosmo_atlas_app_toolkit_v2//protoc-gen-openapiv2/options",
    ],
)

alias(
    name = "go_default_library",
    actual = ":query",
    visibility = ["//visibility:public"],
)

go_test(
    name = "query_test",
    srcs = [
        "fields_test.go",
        "filtering_lexer_test.go",
        "filtering_parser_test.go",
        "filtering_test.go",
        "page_token_test.go",
        "pagination_test.go",
        "sorting_test.go",
    ],
    embed = [":query"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)
