load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "errdetails_proto",
    srcs = ["error_details.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "errdetails_go_proto",
    importpath = "github.com/klosmo/atlas-app-toolkit/rpc/errdetails",
    proto = ":errdetails_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "errdetails",
    srcs = ["error_details.go"],
    embed = [":errdetails_go_proto"],
    importpath = "github.com/klosmo/atlas-app-toolkit/v2/rpc/errdetails",
    importpath_aliases = ["github.com/klosmo/atlas-app-toolkit/rpc/errdetails"],
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto_googleapis_rpc//code",
        "@org_golang_google_grpc//codes",
    ],
)

alias(
    name = "go_default_library",
    actual = ":errdetails",
    visibility = ["//visibility:public"],
)

go_test(
    name = "errdetails_test",
    srcs = ["error_details_test.go"],
    embed = [":errdetails"],
    deps = ["@org_golang_google_grpc//codes"],
)
