load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "errfields_proto",
    srcs = ["error_fields.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "errfields_go_proto",
    importpath = "github.com/klosmo/atlas-app-toolkit/rpc/errfields",
    proto = ":errfields_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "errfields",
    srcs = ["error_fields.go"],
    embed = [":errfields_go_proto"],
    importpath = "github.com/klosmo/atlas-app-toolkit/v2/rpc/errfields",
    importpath_aliases = ["github.com/klosmo/atlas-app-toolkit/rpc/errfields"],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":errfields",
    visibility = ["//visibility:public"],
)

go_test(
    name = "errfields_test",
    srcs = ["error_fields_test.go"],
    embed = [":errfields"],
)
