load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "resource_proto",
    srcs = ["resource.proto"],
    visibility = ["//visibility:public"],
    deps = ["//protoc-gen-openapiv2/options:options_proto"],
)

go_proto_library(
    name = "resource_go_proto",
    importpath = "github.com/klosmo/atlas-app-toolkit/rpc/resource",
    proto = ":resource_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "resource",
    srcs = [
        "jsonpb.go",
        "nil.go",
        "string.go",
    ],
    embed = [":resource_go_proto"],
    importpath = "github.com/klosmo/atlas-app-toolkit/v2/rpc/resource",
    importpath_aliases = ["github.com/klosmo/atlas-app-toolkit/rpc/resource"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_klosmo_atlas_app_toolkit_v2//protoc-gen-openapiv2/options",
    ],
)

alias(
    name = "go_default_library",
    actual = ":resource",
    visibility = ["//visibility:public"],
)

go_test(
    name = "resource_test",
    srcs = [
        "json_test.go",
        "jsonpb_test.go",
        "nil_test.go",
        "string_test.go",
    ],
    embed = [":resource"],
    deps = ["@com_github_golang_protobuf//jsonpb:go_default_library_gen"],
)
